--- a/src/sass/blocks/comment.scss
+++ b/src/sass/blocks/comment.scss
@@ -24,11 +24,13 @@
 
   margin-bottom: 38px;
 
-  font: $font-title-form-small-mobile;
+  font: $font-title-medium-mobile;
+  line-height: 1.08;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 76px;
 
-    font: $font-title-form-small-tablet;
+    font: $font-title-medium-tablet;
+    line-height: 1;
   }
 }
