--- a/src/sass/blocks/gift.scss
+++ b/src/sass/blocks/gift.scss
@@ -31,9 +31,8 @@
 
   width: 161px;
 
-  font: $font-text-small-tablet;
+  font: $font-text-gift-mobile;
   color: $color-2;
-  line-height: 1.25;
   text-align: center;
 
   @media (min-width: $tablet-width) {
