--- a/src/sass/blocks/work-principle-list.scss
+++ b/src/sass/blocks/work-principle-list.scss
@@ -155,28 +155,13 @@
 .work-principle-list__description {
   @include indent-reset;
 
+  font: $font-text-medium-mobile;
   color: $color-5;
 
   position: relative;
   z-index: 2;
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-medium-tablet;
+  }
 }
-
-// @media (max-width: $mobile-width-only) {
-//   .work-principle-list__item {
-//     &:nth-child(4) {
-//       br {
-//         display: none;
-//       }
-//     }
-//   }
-// }
-
-// @media (min-width: $desktop-width) {
-//   .work-principle-list__item {
-//     &:nth-child(4) {
-//       br {
-//         display: none;
-//       }
-//     }
-//   }
-// }
