--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,8 +142,7 @@ body {
 }
 @media (min-width: 769px) {
   .additional-product-list__title {
-    font: 200 2rem/1.2 "Oswald", Arial, sans-serif;
-    line-height: 1;
+    font: 200 2rem/1.25 "Oswald", Arial, sans-serif;
   }
 }
 @media (min-width: 1440px) {
@@ -172,13 +171,13 @@ body {
 }
 
 .additional-product-list__amount-package {
-  font: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+  font: 200 1.4rem/1.28 "Lato", Arial, sans-serif;
   line-height: 1;
   color: #444444;
 }
 @media (min-width: 769px) {
   .additional-product-list__amount-package {
-    font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+    font: 200 1.6rem/1.5 "Lato", Arial, sans-serif;
     line-height: 1.25;
     display: block;
     margin-right: 49px;
@@ -191,13 +190,13 @@ body {
 }
 
 .additional-product-list__amount-price {
-  font: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+  font: 200 1.4rem/1.28 "Lato", Arial, sans-serif;
   line-height: 1;
   color: #444444;
 }
 @media (min-width: 769px) {
   .additional-product-list__amount-price {
-    font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+    font: 200 1.6rem/1.5 "Lato", Arial, sans-serif;
     line-height: 1.25;
   }
 }
@@ -224,6 +223,7 @@ body {
   .additional-product-list__button {
     grid-column: 1/-1;
     grid-row: 2/3;
+    font: 200 2rem/0 "Oswald", Arial, sans-serif;
   }
 }
 @media (min-width: 1440px) {
@@ -357,13 +357,15 @@ body {
 .additionally__title {
   margin: 0;
   padding: 0;
-  font: 200 2.4rem/1.08 "Oswald", Arial, sans-serif;
+  font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
+  line-height: 1.08;
   margin-bottom: 34px;
 }
 @media (min-width: 769px) {
   .additionally__title {
     margin-bottom: 57px;
     font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+    line-height: 1;
   }
 }
 
@@ -396,12 +398,10 @@ body {
 .additionally__field-label {
   width: 220px;
   min-height: 30px;
-  font: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
 }
 @media (min-width: 769px) {
   .additionally__field-label {
     min-height: 40px;
-    font: 200 2rem/normal "Oswald", Arial, sans-serif;
   }
 }
 .additionally__field-label:not(:last-child) {
@@ -442,8 +442,7 @@ body {
   display: block;
   width: 100%;
   min-height: 40px;
-  font: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
-  font-size: 1.6rem;
+  font: 200 1.6rem/1.25 "Oswald", Arial, sans-serif;
   line-height: 1.25;
   color: #ffffff;
   text-transform: uppercase;
@@ -458,8 +457,7 @@ body {
   .additionally__button-send {
     width: 282px;
     min-height: 52px;
-    font-size: 2rem;
-    line-height: 0;
+    font: 200 2rem/0 "Oswald", Arial, sans-serif;
     margin-bottom: 0;
     margin-right: 64px;
   }
@@ -472,12 +470,12 @@ body {
 }
 
 .additionally__required-field {
-  font: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+  font: 200 1.4rem/1.28 "Lato", Arial, sans-serif;
   line-height: 1.14;
 }
 @media (min-width: 769px) {
   .additionally__required-field {
-    font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+    font: 200 1.6rem/1.5 "Lato", Arial, sans-serif;
     line-height: 1;
   }
 }
@@ -622,9 +620,15 @@ body {
 .work-principle-list__description {
   margin: 0;
   padding: 0;
+  font: 200 1.4rem/1.28 "Lato", Arial, sans-serif;
   color: #444444;
   position: relative;
   z-index: 2;
+}
+@media (min-width: 769px) {
+  .work-principle-list__description {
+    font: 200 1.6rem/1.5 "Lato", Arial, sans-serif;
+  }
 }
 
 @media (min-width: 769px) and (max-width: 1439px) {
@@ -661,10 +665,14 @@ body {
 .work-principle__title {
   margin: 0;
   padding: 0;
+  font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+  line-height: 1.11;
   margin-bottom: 40px;
 }
 @media (min-width: 769px) {
   .work-principle__title {
+    font: 200 6rem/1 "Oswald", Arial, sans-serif;
+    line-height: 1;
     margin-bottom: 72px;
   }
 }
@@ -699,11 +707,13 @@ body {
 .catalog__title {
   margin: 0;
   padding: 0;
+  font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
   margin-bottom: 41px;
   padding: 0 20px;
 }
 @media (min-width: 769px) {
   .catalog__title {
+    font: 200 6rem/1 "Oswald", Arial, sans-serif;
     margin-bottom: 163px;
   }
 }
@@ -781,7 +791,7 @@ body {
     margin: 0 auto;
     margin-bottom: 13px;
     max-width: 125px;
-    font: 200 2rem/1.2 "Oswald", Arial, sans-serif;
+    font: 200 2rem/1.25 "Oswald", Arial, sans-serif;
     text-align: center;
   }
   .catalog-card__heading--show-more {
@@ -826,13 +836,13 @@ body {
 }
 
 .catalog-card__compound-item {
-  font: 400 1.2rem/1 "Lato", Arial, sans-serif;
+  font: 200 1.2rem/1 "Lato", Arial, sans-serif;
   color: #444444;
   line-height: 1.33;
 }
 @media (min-width: 769px) {
   .catalog-card__compound-item {
-    font: 400 1.4rem/1 "Lato", Arial, sans-serif;
+    font: 200 1.4rem/1 "Lato", Arial, sans-serif;
     line-height: 1;
   }
 }
@@ -840,7 +850,7 @@ body {
 .catalog-card__text {
   margin: 0;
   padding: 0;
-  font: 400 1.2rem/1 "Lato", Arial, sans-serif;
+  font: 200 1.2rem/1 "Lato", Arial, sans-serif;
   line-height: 1.33;
   text-align: center;
   color: #444444;
@@ -852,7 +862,7 @@ body {
 }
 @media (min-width: 769px) {
   .catalog-card__text {
-    font: 400 1.4rem/1 "Lato", Arial, sans-serif;
+    font: 200 1.4rem/1 "Lato", Arial, sans-serif;
     line-height: 1.12;
     max-width: 165px;
     justify-self: center;
@@ -991,12 +1001,14 @@ body {
   margin: 0;
   padding: 0;
   margin-bottom: 38px;
-  font: 200 2.4rem/1.08 "Oswald", Arial, sans-serif;
+  font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
+  line-height: 1.08;
 }
 @media (min-width: 769px) {
   .comment__title {
     margin-bottom: 76px;
     font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+    line-height: 1;
   }
 }
 
@@ -1023,13 +1035,15 @@ body {
 .contact-details__title {
   margin: 0;
   padding: 0;
+  font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
+  line-height: 1.08;
   margin-bottom: 35px;
-  font: 200 2.4rem/1.08 "Oswald", Arial, sans-serif;
 }
 @media (min-width: 769px) {
   .contact-details__title {
     margin-bottom: 76px;
     font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+    line-height: 1;
   }
 }
 
@@ -1118,7 +1132,7 @@ body {
 }
 
 .copyright__link-html-academy {
-  font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+  font: 200 1.4rem/1 "Lato", Arial, sans-serif;
   color: #444444;
 }
 
@@ -1161,10 +1175,14 @@ body {
 .example__title {
   margin: 0;
   padding: 0;
+  font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+  line-height: 1.11;
   margin-bottom: 40px;
 }
 @media (min-width: 769px) {
   .example__title {
+    font: 200 6rem/1 "Oswald", Arial, sans-serif;
+    line-height: 1;
     margin-bottom: 63px;
   }
 }
@@ -1173,12 +1191,14 @@ body {
   margin: 0;
   padding: 0;
   width: 280px;
+  font: 200 1.4rem/1.28 "Lato", Arial, sans-serif;
   color: #444444;
   margin-bottom: 20px;
 }
 @media (min-width: 769px) {
   .example__text {
     width: 708px;
+    font: 200 1.6rem/1.5 "Lato", Arial, sans-serif;
     margin-bottom: 54px;
   }
 }
@@ -1238,14 +1258,21 @@ body {
 }
 
 .example__heading {
+  font: 200 2.4rem/1 "Oswald", Arial, sans-serif;
   text-transform: uppercase;
   align-self: center;
   justify-self: center;
+}
+@media (min-width: 769px) {
+  .example__heading {
+    font: 200 3rem/1.23 "Oswald", Arial, sans-serif;
+  }
 }
 
 .example__description {
   margin: 0;
   padding: 0;
+  font: 200 1.2rem/1 "Lato", Arial, sans-serif;
   text-align: center;
   color: #444444;
   background-color: #eaeaea;
@@ -1255,6 +1282,7 @@ body {
 }
 @media (min-width: 769px) {
   .example__description {
+    font: 200 1.4rem/1 "Lato", Arial, sans-serif;
     background-color: #ffffff;
   }
   .example__description br {
@@ -1353,10 +1381,7 @@ body {
 }
 
 .field-input {
-  font-weight: 200;
-  font-size: 1.6rem;
-  line-height: 1.12;
-  font-family: "Oswald", Arial, sans-serif;
+  font: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
   color: #444444;
   text-transform: uppercase;
 }
@@ -1416,9 +1441,8 @@ body {
   left: 58px;
   z-index: 2;
   width: 161px;
-  font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+  font: 200 1.6rem/1.25 "Lato", Arial, sans-serif;
   color: #ffffff;
-  line-height: 1.25;
   text-align: center;
 }
 @media (min-width: 769px) {
@@ -1479,19 +1503,18 @@ body {
 }
 @media (min-width: 769px) {
   .location__address-wrapper-title {
-    font-size: 2rem;
-    line-height: 1.3;
+    font: 200 2rem/1.3 "Oswald", Arial, sans-serif;
   }
 }
 
 .location__address {
-  font: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+  font: 200 1.2rem/1 "Lato", Arial, sans-serif;
   line-height: 1.42;
   color: #444444;
 }
 @media (min-width: 769px) {
   .location__address {
-    font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+    font: 200 1.4rem/1 "Lato", Arial, sans-serif;
     font-size: 1.6rem;
     line-height: 1.25;
     text-align: right;
@@ -1784,10 +1807,12 @@ body {
 .program-selection__title {
   margin: 0;
   padding: 0;
+  font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
   margin-bottom: 37px;
 }
 @media (min-width: 769px) {
   .program-selection__title {
+    font: 200 6rem/1 "Oswald", Arial, sans-serif;
     margin-bottom: 54px;
   }
 }
@@ -1800,16 +1825,17 @@ body {
 .program-selection__text {
   margin: 0;
   padding: 0;
-  font: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
+  font: 200 1.4rem/1 "Oswald", Arial, sans-serif;
+  line-height: 1.28;
   color: #000000;
   text-transform: uppercase;
-  color: #000000;
   width: 226px;
   margin-bottom: 39px;
 }
 @media (min-width: 769px) {
   .program-selection__text {
-    font: 200 2rem/1.5 "Oswald", Arial, sans-serif;
+    font: 200 2rem/1 "Oswald", Arial, sans-serif;
+    line-height: 1.5;
     width: 323px;
     margin-bottom: 66px;
   }
@@ -2018,11 +2044,13 @@ body {
   margin: 0;
   padding: 0;
   display: inline-block;
+  font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
   text-transform: uppercase;
 }
 @media (min-width: 769px) {
   .program-type__title {
     margin-bottom: 22px;
+    font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
   }
 }
 @media (min-width: 1440px) {
@@ -2035,6 +2063,7 @@ body {
   margin: 0;
   padding: 0;
   color: #444444;
+  font: 200 1.4rem/1.28 "Lato", Arial, sans-serif;
 }
 .program-type__description::after {
   content: "";
@@ -2053,6 +2082,7 @@ body {
 @media (min-width: 769px) {
   .program-type__description {
     color: #000000;
+    font: 200 1.6rem/1.5 "Lato", Arial, sans-serif;
     width: 340px;
     margin-bottom: 48px;
   }
@@ -2089,7 +2119,7 @@ body {
 .program-type__link-text {
   display: inline-block;
   margin-right: 15px;
-  font: 200 1.6rem/1.25 "Oswald", Arial, sans-serif;
+  font: 200 1.6rem/1 "Oswald", Arial, sans-serif;
   text-transform: uppercase;
 }
 @media (min-width: 769px) {
@@ -2229,6 +2259,7 @@ body {
 .program__title {
   margin: 0;
   padding: 0;
+  font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
   text-align: center;
   color: #ffffff;
   position: relative;
@@ -2237,6 +2268,7 @@ body {
 }
 @media (min-width: 769px) {
   .program__title {
+    font: 200 6rem/1 "Oswald", Arial, sans-serif;
     color: #000000;
     text-align: left;
     width: 416px;
@@ -2383,7 +2415,7 @@ body {
 }
 @media (min-width: 1440px) {
   .site-list__link {
-    font: 200 2rem/1 "Oswald", Arial, sans-serif;
+    font: 200 2rem/normal "Oswald", Arial, sans-serif;
   }
   .site-list__link--white {
     color: #ffffff;
@@ -2462,7 +2494,8 @@ body {
 }
 @media (min-width: 769px) {
   .textarea::placeholder {
-    font: 200 2rem/1.5 "Oswald", Arial, sans-serif;
+    font: 200 2rem/normal "Oswald", Arial, sans-serif;
+    line-height: 1.5;
   }
 }
 .textarea:hover {
@@ -2477,62 +2510,13 @@ body {
     width: 631px;
     height: 174px;
     padding: 10px 19px;
-    font: 200 2rem/1.5 "Oswald", Arial, sans-serif;
+    font: 200 2rem/normal "Oswald", Arial, sans-serif;
+    line-height: 1.5;
   }
 }
 @media (min-width: 1440px) {
   .textarea {
     width: 1220px;
-  }
-}
-
-.title--large {
-  font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
-}
-@media (min-width: 769px) {
-  .title--large {
-    font: 200 6rem/1 "Oswald", Arial, sans-serif;
-  }
-}
-.title--medium {
-  font: 200 3.6rem/1.11 "Oswald", Arial, sans-serif;
-}
-@media (min-width: 769px) {
-  .title--medium {
-    font: 200 6rem/1 "Oswald", Arial, sans-serif;
-  }
-}
-.title--small {
-  font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
-}
-@media (min-width: 769px) {
-  .title--small {
-    font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
-  }
-}
-.title--extra-small {
-  font: 200 2.4rem/1 "Oswald", Arial, sans-serif;
-}
-@media (min-width: 769px) {
-  .title--extra-small {
-    font: 200 3rem/1.23 "Oswald", Arial, sans-serif;
-  }
-}
-
-.description--small {
-  font: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
-}
-@media (min-width: 769px) {
-  .description--small {
-    font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
-  }
-}
-.description--extra-small {
-  font: 400 1.2rem/1 "Lato", Arial, sans-serif;
-}
-@media (min-width: 769px) {
-  .description--extra-small {
-    font: 400 1.4rem/1 "Lato", Arial, sans-serif;
   }
 }
 
