--- a/src/sass/blocks/additionally.scss
+++ b/src/sass/blocks/additionally.scss
@@ -22,14 +22,16 @@
 .additionally__title {
   @include indent-reset;
 
-  font: $font-title-form-small-mobile;
+  font: $font-title-medium-mobile;
+  line-height: 1.08;
 
   margin-bottom: 34px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 57px;
 
-    font: $font-title-form-small-tablet;
+    font: $font-title-medium-tablet;
+    line-height: 1;
   }
 }
 
@@ -61,12 +63,8 @@
   width: 220px;
   min-height: 30px;
 
-  font: $font-field-label-mobile;
-
   @media (min-width: $tablet-width) {
     min-height: 40px;
-
-    font: $font-field-label-tablet;
   }
 
   &:not(:last-child) {
@@ -107,8 +105,7 @@
   width: 100%;
   min-height: 40px;
 
-  font: $font-button-small-mobile;
-  font-size: 1.6rem;
+  font: $font-button-primary-mobile;
   line-height: 1.25;
   color: $color-2;
   text-transform: uppercase;
@@ -125,8 +122,7 @@
     width: 282px;
     min-height: 52px;
 
-    font-size: 2rem;
-    line-height: 0;
+    font: $font-button-primary-tablet;
 
     margin-bottom: 0;
     margin-right: 64px;
@@ -140,11 +136,11 @@
 }
 
 .additionally__required-field {
-  font: $font-text-small-mobile;
+  font: $font-text-medium-mobile;
   line-height: 1.14;
 
   @media (min-width: $tablet-width) {
-    font: $font-text-small-tablet;
+    font: $font-text-medium-tablet;
     line-height: 1;
   }
 }
