--- a/src/sass/blocks/catalog-card.scss
+++ b/src/sass/blocks/catalog-card.scss
@@ -35,7 +35,7 @@
 
   margin-bottom: 13px;
 
-  font: $font-card-title-mobile;
+  font: $font-title-catalog-mobile;
   text-transform: uppercase;
 
   min-width: 76px;
@@ -64,7 +64,7 @@
 
     max-width: 125px;
 
-    font: $font-card-title-tablet;
+    font: $font-title-catalog-tablet;
     text-align: center;
 
     &--show-more {
@@ -114,12 +114,12 @@
 }
 
 .catalog-card__compound-item {
-  font: $font-text-extra-small-mobile;
+  font: $font-text-small-mobile;
   color: $color-5;
   line-height: 1.33;
 
   @media (min-width: $tablet-width) {
-    font: $font-text-extra-small-tablet;
+    font: $font-text-small-tablet;
     line-height: 1;
   }
 }
@@ -127,7 +127,7 @@
 .catalog-card__text {
   @include indent-reset;
 
-  font: $font-text-extra-small-mobile;
+  font: $font-text-small-mobile;
   line-height: 1.33;
   text-align: center;
   color: $color-5;
@@ -140,7 +140,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    font: $font-text-extra-small-tablet;
+    font: $font-text-small-tablet;
     line-height: 1.12;
 
     max-width: 165px;
@@ -161,7 +161,7 @@
   align-self: center;
 
   @include link-reset;
-  font: $font-catalog-button-mobile;
+  font: $font-button-primary-mobile;
   color: $color-2;
   text-transform: uppercase;
   text-align: center;
