--- a/src/sass/blocks/field-input.scss
+++ b/src/sass/blocks/field-input.scss
@@ -1,18 +1,15 @@
 .field-input {
-  font-weight: 200;
-  font-size: 1.6rem;
-  line-height: 1.12;
-  font-family: "Oswald", Arial, sans-serif;
+  font: $font-label-text-mobile;
   color: $color-5;
   text-transform: uppercase;
 
   &::placeholder {
-    font: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
+    font: $font-label-text-mobile;
     text-transform: uppercase;
     color: $color-5;
 
     @media (min-width: $tablet-width) {
-      font: 200 2rem / normal "Oswald", Arial, sans-serif;
+      font: $font-label-text-tablet;
     }
   }
 
@@ -26,6 +23,6 @@
   }
 
   @media (min-width: $tablet-width) {
-    font: 200 2rem / normal "Oswald", Arial, sans-serif;
+    font: $font-label-text-tablet;
   }
 }
