--- a/src/css/style.css
+++ b/src/css/style.css
@@ -223,7 +223,7 @@ body {
   .additional-product-list__button {
     grid-column: 1/-1;
     grid-row: 2/3;
-    font: 200 2rem/0 "Oswald", Arial, sans-serif;
+    font: 200 2rem/1 "Oswald", Arial, sans-serif;
   }
 }
 @media (min-width: 1440px) {
@@ -231,6 +231,25 @@ body {
     min-height: 40px;
     grid-column: 4/5;
     grid-row: 1/-1;
+  }
+}
+
+.additional-product {
+  position: relative;
+}
+.additional-product::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #68b738;
+  position: absolute;
+  top: 16px;
+  z-index: 1;
+}
+@media (min-width: 769px) {
+  .additional-product::before {
+    top: 23px;
   }
 }
 
@@ -258,11 +277,31 @@ body {
   margin: 0;
   padding: 0;
   margin-bottom: 36px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 266px;
+  background-color: #ffffff;
+  position: relative;
+  left: -20px;
+  z-index: 2;
+  font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
   line-height: 1;
 }
 @media (min-width: 769px) {
   .additional-product__title {
     margin-bottom: 80px;
+    padding-left: 37px;
+    padding-right: 36px;
+    width: 412px;
+    font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
+  }
+}
+@media (min-width: 1440px) {
+  .additional-product__title {
+    padding-left: 40px;
+    padding-right: 35px;
+    width: 414px;
+    left: -40px;
   }
 }
 
@@ -334,6 +373,25 @@ body {
   }
 }
 
+.additionally {
+  position: relative;
+}
+.additionally::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #68b738;
+  position: absolute;
+  top: 14px;
+  z-index: 1;
+}
+@media (min-width: 769px) {
+  .additionally::before {
+    top: 23px;
+  }
+}
+
 .additionally__wrapper {
   width: 320px;
   margin-bottom: 32px;
@@ -360,10 +418,21 @@ body {
   font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
   line-height: 1.08;
   margin-bottom: 34px;
+  padding-left: 20px;
+  padding-right: 23px;
+  width: 184px;
+  background-color: #ffffff;
+  position: relative;
+  left: -20px;
+  z-index: 2;
 }
 @media (min-width: 769px) {
   .additionally__title {
     margin-bottom: 57px;
+    padding-left: 40px;
+    padding-right: 40px;
+    width: 291px;
+    left: -40px;
     font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
     line-height: 1;
   }
@@ -457,7 +526,7 @@ body {
   .additionally__button-send {
     width: 282px;
     min-height: 52px;
-    font: 200 2rem/0 "Oswald", Arial, sans-serif;
+    font: 200 2rem/1 "Oswald", Arial, sans-serif;
     margin-bottom: 0;
     margin-right: 64px;
   }
@@ -977,6 +1046,25 @@ body {
   }
 }
 
+.comment {
+  position: relative;
+}
+.comment::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #68b738;
+  position: absolute;
+  top: 14px;
+  z-index: 1;
+}
+@media (min-width: 769px) {
+  .comment::before {
+    top: 20px;
+  }
+}
+
 .comment__wrapper {
   width: 320px;
   margin-bottom: 23px;
@@ -1001,15 +1089,40 @@ body {
   margin: 0;
   padding: 0;
   margin-bottom: 38px;
+  padding-left: 20px;
+  padding-right: 22px;
+  width: 163px;
+  background-color: #ffffff;
+  position: relative;
+  left: -20px;
+  z-index: 2;
   font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
   line-height: 1.08;
 }
 @media (min-width: 769px) {
   .comment__title {
     margin-bottom: 76px;
+    padding-left: 40px;
+    padding-right: 40px;
+    width: 262px;
+    left: -40px;
     font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
     line-height: 1;
   }
+}
+
+.contact-details {
+  position: relative;
+}
+.contact-details::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #68b738;
+  position: absolute;
+  top: 16px;
+  z-index: 1;
 }
 
 .contact-details__wrapper {
@@ -1038,10 +1151,21 @@ body {
   font: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
   line-height: 1.08;
   margin-bottom: 35px;
+  padding-left: 20px;
+  padding-right: 14px;
+  width: 221px;
+  position: relative;
+  left: -20px;
+  z-index: 2;
+  background-color: #ffffff;
 }
 @media (min-width: 769px) {
   .contact-details__title {
     margin-bottom: 76px;
+    padding-left: 40px;
+    padding-right: 39px;
+    width: 593px;
+    left: -40px;
     font: 200 3.6rem/1 "Oswald", Arial, sans-serif;
     line-height: 1;
   }
@@ -1384,6 +1508,7 @@ body {
   font: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
   color: #444444;
   text-transform: uppercase;
+  align-self: center;
 }
 .field-input::placeholder {
   font: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
@@ -1780,7 +1905,13 @@ body {
 .map__iframe {
   display: block;
   width: 100%;
+  height: 400px;
   border: none;
+}
+@media (max-width: 768px) {
+  .map__iframe {
+    height: 362px;
+  }
 }
 
 .program-selection__wrapper {
@@ -1953,11 +2084,15 @@ body {
   }
 }
 
+.program-selection__field-input {
+  align-self: center;
+}
+
 .program-selection__field-text {
   display: block;
   margin-right: 13px;
 }
-.program-selection__field-text--radio {
+.program-selection__field-text--program {
   margin-right: 0;
 }
 
@@ -1966,8 +2101,6 @@ body {
   border: 1px solid #e7e7e7;
 }
 .program-selection__field-input--radio {
-  flex-grow: 0;
-  align-self: flex-start;
   width: auto !important;
 }
 
