--- a/src/sass/blocks/additional-product.scss
+++ b/src/sass/blocks/additional-product.scss
@@ -1,3 +1,25 @@
+.additional-product {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 2px;
+
+    background-color: $background-color-3;
+
+    position: absolute;
+    top: 16px;
+    z-index: 1;
+
+    @media (min-width: $tablet-width) {
+      top: 23px;
+    }
+  }
+}
+
 .additional-product__wrapper {
   width: $mobile-width;
 
@@ -23,11 +45,37 @@
   @include indent-reset;
 
   margin-bottom: 36px;
+  padding-left: 20px;
+  padding-right: 20px;
 
+  width: 266px;
+
+  background-color: $background-color-2;
+
+  position: relative;
+  left: -20px;
+  z-index: 2;
+
+  font: $font-title-medium-mobile;
   line-height: 1;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 80px;
+    padding-left: 37px;
+    padding-right: 36px;
+
+    width: 412px;
+
+    font: $font-title-medium-tablet;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 40px;
+    padding-right: 35px;
+
+    width: 414px;
+
+    left: -40px;
   }
 }
 
