--- a/src/sass/blocks/comment.scss
+++ b/src/sass/blocks/comment.scss
@@ -1,3 +1,25 @@
+.comment {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 2px;
+
+    background-color: $background-color-3;
+
+    position: absolute;
+    top: 14px;
+    z-index: 1;
+
+    @media (min-width: $tablet-width) {
+      top: 20px;
+    }
+  }
+}
+
 .comment__wrapper {
   width: $mobile-width;
 
@@ -23,12 +45,29 @@
   @include indent-reset;
 
   margin-bottom: 38px;
+  padding-left: 20px;
+  padding-right: 22px;
+
+  width: 163px;
+
+  background-color: $background-color-2;
+
+  position: relative;
+  left: -20px;
+  z-index: 2;
 
   font: $font-title-medium-mobile;
   line-height: 1.08;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 76px;
+
+    padding-left: 40px;
+    padding-right: 40px;
+
+    width: 262px;
+
+    left: -40px;
 
     font: $font-title-medium-tablet;
     line-height: 1;
