--- a/src/sass/blocks/contact-details.scss
+++ b/src/sass/blocks/contact-details.scss
@@ -1,3 +1,21 @@
+.contact-details {
+  position: relative;
+
+  &::before {
+    content: "";
+    display: block;
+
+    width: 100%;
+    height: 2px;
+
+    background-color: $background-color-3;
+
+    position: absolute;
+    top: 16px;
+    z-index: 1;
+  }
+}
+
 .contact-details__wrapper {
   width: $mobile-width;
 
@@ -26,9 +44,25 @@
   line-height: 1.08;
 
   margin-bottom: 35px;
+  padding-left: 20px;
+  padding-right: 14px;
+
+  width: 221px;
+
+  position: relative;
+  left: -20px;
+  z-index: 2;
+
+  background-color: $background-color-2;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 76px;
+    padding-left: 40px;
+    padding-right: 39px;
+
+    width: 593px;
+
+    left: -40px;
 
     font: $font-title-medium-tablet;
     line-height: 1;
