--- a/src/sass/blocks/map.scss
+++ b/src/sass/blocks/map.scss
@@ -2,6 +2,11 @@
   display: block;
 
   width: 100%;
+  height: 400px;
 
   border: none;
+
+  @media (max-width: $mobile-width-only) {
+    height: 362px;
+  }
 }
