--- a/src/sass/blocks/program-selection.scss
+++ b/src/sass/blocks/program-selection.scss
@@ -190,26 +190,17 @@
   }
 }
 
+.program-selection__field-input {
+  align-self: center;
+}
+
 .program-selection__field-text {
   display: block;
 
   margin-right: 13px;
 
-  &--radio {
+  &--program {
     margin-right: 0;
-
-    // &::before {
-    //   content: "";
-    //   display: block;
-
-    //   width: 30px;
-    //   height: 30px;
-
-    //   background-color: rgb(45, 45, 216);
-    //   border-radius: 50%;
-
-    //   position: absolute;
-    // }
   }
 }
 
@@ -219,9 +210,6 @@
   border: 1px solid $background-color-11;
 
   &--radio {
-    flex-grow: 0;
-    align-self: flex-start;
-
     width: auto !important; //чтобы радио-кнопки были специфичнее
   }
 }
