--- a/src/sass/blocks/program-selection.scss
+++ b/src/sass/blocks/program-selection.scss
@@ -194,13 +194,64 @@
   align-self: center;
 }
 
+.program-selection__control-mark {
+  &--program {
+    display: block;
+
+    width: 30px;
+    height: 30px;
+
+    border: 1px solid $background-color-7;
+    border-radius: 50%;
+    background-color: $background-color-2;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    @media (min-width: $tablet-width) {
+      width: 40px;
+      height: 40px;
+    }
+
+    &::after {
+      content: "";
+      display: none;
+
+      width: 15px;
+      height: 15px;
+
+      border-radius: 50%;
+
+      background-color: $background-color-3;
+
+      position: absolute;
+      top: 7px;
+      left: 6px;
+
+      @media (min-width: $tablet-width) {
+        width: 20px;
+        height: 20px;
+
+        top: 9px;
+        left: 9px;
+      }
+    }
+  }
+}
+
 .program-selection__field-text {
   display: block;
 
   margin-right: 13px;
 
   &--program {
+    margin-left: 45px;
     margin-right: 0;
+
+    @media (min-width: $tablet-width) {
+      margin-left: 60px;
+    }
   }
 }
 
@@ -209,7 +260,21 @@
 
   border: 1px solid $background-color-11;
 
-  &--radio {
+  &--program {
+    @include indent-reset;
     width: auto !important; //чтобы радио-кнопки были специфичнее
+
+    position: absolute;
+    top: 7px;
+    left: 6.5px;
+    z-index: 1;
+
+    visibility: hidden;
   }
+}
+
+/* Радио-кнопки */
+.program-selection__field-input[type="radio"]:checked
+  + .program-selection__control-mark::after {
+  display: block;
 }
