--- a/src/css/style.css
+++ b/src/css/style.css
@@ -464,12 +464,18 @@ body {
 }
 
 .additionally__field-label {
-  width: 220px;
   min-height: 30px;
+  position: relative;
 }
 @media (min-width: 769px) {
   .additionally__field-label {
     min-height: 40px;
+  }
+  .additionally__field-label:nth-of-type(1) {
+    margin-right: 123px;
+  }
+  .additionally__field-label:nth-of-type(3) {
+    margin-right: 216px;
   }
 }
 .additionally__field-label:not(:last-child) {
@@ -480,16 +486,57 @@ body {
     margin-bottom: 0;
   }
 }
+@media (min-width: 1440px) {
+  .additionally__field-label:nth-of-type(1) {
+    margin-right: 104px;
+  }
+  .additionally__field-label:nth-of-type(2) {
+    margin-right: 136px;
+  }
+  .additionally__field-label:nth-of-type(3) {
+    margin-right: 197px;
+  }
+}
 
 .additionally__field-input {
   margin: 0;
   padding: 0;
-  margin-right: 16px;
+  position: absolute;
+  top: 9px;
+  left: 5px;
+  visibility: hidden;
+}
+
+.additionally__control-mark {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #d9d9d9;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 @media (min-width: 769px) {
-  .additionally__field-input {
-    margin-right: 20px;
+  .additionally__control-mark {
+    width: 40px;
+    height: 40px;
   }
+}
+
+.additionally__field-text {
+  display: block;
+  margin-left: 46px;
+}
+@media (min-width: 769px) {
+  .additionally__field-text {
+    margin-left: 60px;
+  }
+}
+
+.additionally__field-input[type=checkbox]:checked + .additionally__control-mark {
+  background: url("../../img/tick-checkbox.svg") no-repeat;
+  background-position: center;
 }
 
 .additionally__send-container {
