--- a/src/sass/blocks/additionally.scss
+++ b/src/sass/blocks/additionally.scss
@@ -98,11 +98,21 @@
 }
 
 .additionally__field-label {
-  width: 220px;
+  // width: 220px;
   min-height: 30px;
+
+  position: relative;
 
   @media (min-width: $tablet-width) {
     min-height: 40px;
+
+    &:nth-of-type(1) {
+      margin-right: 123px;
+    }
+
+    &:nth-of-type(3) {
+      margin-right: 216px;
+    }
   }
 
   &:not(:last-child) {
@@ -112,15 +122,66 @@
       margin-bottom: 0;
     }
   }
+
+  @media (min-width: $desktop-width) {
+    &:nth-of-type(1) {
+      margin-right: 104px;
+    }
+
+    &:nth-of-type(2) {
+      margin-right: 136px;
+    }
+
+    &:nth-of-type(3) {
+      margin-right: 197px;
+    }
+  }
 }
 
 .additionally__field-input {
   @include indent-reset;
-  margin-right: 16px;
+
+  position: absolute;
+  top: 9px;
+  left: 5px;
+
+  visibility: hidden;
+}
+
+.additionally__control-mark {
+  display: block;
+
+  width: 30px;
+  height: 30px;
+
+  border: 1px solid $background-color-7;
+
+  background-color: $background-color-2;
+
+  position: absolute;
+  top: 0;
+  left: 0;
 
   @media (min-width: $tablet-width) {
-    margin-right: 20px;
+    width: 40px;
+    height: 40px;
   }
+}
+
+.additionally__field-text {
+  display: block;
+
+  margin-left: 46px;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 60px;
+  }
+}
+
+.additionally__field-input[type="checkbox"]:checked
+  + .additionally__control-mark {
+  background: url("../../img/tick-checkbox.svg") no-repeat;
+  background-position: center;
 }
 
 .additionally__send-container {
