--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -32,6 +32,7 @@ $color-10: #111111;
 $color-11: #e7e7e7;
 $color-12: #ff8282;
 $color-13: #222222;
+$color-14: #bababa;
 
 /* === background-colors === */
 $background-color-1: #000000;
@@ -47,6 +48,7 @@ $background-color-10: #111111;
 $background-color-11: #e7e7e7;
 $background-color-12: #ff8282;
 $background-color-13: #222222;
+$background-color-14: #bababa;
 
 /* === fonts-mobile === */
 $font-title-large-mobile: 200 3.6rem/1 "Oswald", Arial, sans-serif;
