--- a/src/css/style.css
+++ b/src/css/style.css
@@ -467,6 +467,12 @@ body {
   min-height: 30px;
   position: relative;
 }
+.additionally__field-label:hover {
+  cursor: pointer;
+}
+.additionally__field-label:hover .additionally__control-mark {
+  border-color: #bababa;
+}
 @media (min-width: 769px) {
   .additionally__field-label {
     min-height: 40px;
@@ -496,6 +502,11 @@ body {
   .additionally__field-label:nth-of-type(3) {
     margin-right: 197px;
   }
+}
+
+.additionally__field-label[disabled] {
+  pointer-events: none;
+  opacity: 0.3;
 }
 
 .additionally__field-input {
@@ -2073,6 +2084,12 @@ body {
 .program-selection__field-label--program:not(:last-child) {
   margin-bottom: 13px;
 }
+.program-selection__field-label--program:hover {
+  cursor: pointer;
+}
+.program-selection__field-label--program:hover .program-selection__control-mark {
+  border-color: #bababa;
+}
 @media (min-width: 769px) {
   .program-selection__field-label--program {
     min-height: 40px;
@@ -2130,6 +2147,11 @@ body {
   }
 }
 
+.program-selection__field-label--program[disabled] {
+  pointer-events: none;
+  opacity: 0.3;
+}
+
 .program-selection__field-input {
   align-self: center;
 }
@@ -2138,7 +2160,7 @@ body {
   display: block;
   width: 30px;
   height: 30px;
-  border: 1px solid #d9d9d9;
+  border: 1px solid #cdcdcd;
   border-radius: 50%;
   background-color: #ffffff;
   position: absolute;
@@ -2164,10 +2186,10 @@ body {
 }
 @media (min-width: 769px) {
   .program-selection__control-mark--program::after {
-    width: 20px;
-    height: 20px;
-    top: 9px;
-    left: 9px;
+    width: 18px;
+    height: 18px;
+    top: 10px;
+    left: 10px;
   }
 }
 
