--- a/src/sass/blocks/program-selection.scss
+++ b/src/sass/blocks/program-selection.scss
@@ -120,6 +120,14 @@
       margin-bottom: 13px;
     }
 
+    &:hover {
+      cursor: pointer;
+    }
+
+    &:hover .program-selection__control-mark {
+      border-color: $background-color-14;
+    }
+
     @media (min-width: $tablet-width) {
       min-height: 40px;
     }
@@ -190,6 +198,13 @@
   }
 }
 
+.program-selection__field-label {
+  &--program[disabled] {
+    pointer-events: none;
+    opacity: 0.3;
+  }
+}
+
 .program-selection__field-input {
   align-self: center;
 }
@@ -201,7 +216,7 @@
     width: 30px;
     height: 30px;
 
-    border: 1px solid $background-color-7;
+    border: 1px solid $background-color-8;
     border-radius: 50%;
     background-color: $background-color-2;
 
@@ -230,11 +245,11 @@
       left: 6px;
 
       @media (min-width: $tablet-width) {
-        width: 20px;
-        height: 20px;
+        width: 18px;
+        height: 18px;
 
-        top: 9px;
-        left: 9px;
+        top: 10px;
+        left: 10px;
       }
     }
   }
