--- a/src/css/style.css
+++ b/src/css/style.css
@@ -731,6 +731,17 @@ body {
     left: 28px;
   }
 }
+.work-principle-list__icon-container--powder .work-principle-list__icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+@media (min-width: 769px) {
+  .work-principle-list__icon-container--powder .work-principle-list__icon {
+    top: 9px;
+    left: 10px;
+  }
+}
 .work-principle-list__icon-container--cutlery .work-principle-list__icon {
   position: absolute;
   top: 15px;
@@ -740,6 +751,17 @@ body {
   .work-principle-list__icon-container--cutlery .work-principle-list__icon {
     top: 25px;
     left: 28px;
+  }
+}
+.work-principle-list__icon-container--watch .work-principle-list__icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+@media (min-width: 769px) {
+  .work-principle-list__icon-container--watch .work-principle-list__icon {
+    top: 9px;
+    left: 10px;
   }
 }
 
@@ -891,6 +913,55 @@ body {
     margin-bottom: 34px;
   }
 }
+@media (min-width: 769px) {
+  .catalog-card__image {
+    position: relative;
+  }
+}
+
+@media (max-width: 768px) {
+  .catalog-card:nth-of-type(odd) .catalog-card__image {
+    transform: translate(30px, 14px);
+  }
+}
+@media (min-width: 769px) {
+  .catalog-card:nth-of-type(odd) .catalog-card__image {
+    top: -45px;
+    left: 40px;
+  }
+}
+@media (min-width: 1440px) {
+  .catalog-card:nth-of-type(odd) .catalog-card__image {
+    top: -52px;
+    left: 4px;
+  }
+}
+@media (max-width: 768px) {
+  .catalog-card:nth-of-type(even) .catalog-card__image {
+    transform: translate(20px, 12px);
+  }
+}
+@media (min-width: 769px) {
+  .catalog-card:nth-of-type(even) .catalog-card__image {
+    top: -73px;
+    left: 39px;
+  }
+}
+@media (min-width: 1440px) {
+  .catalog-card:nth-of-type(even) .catalog-card__image {
+    top: -80px;
+    left: 0;
+  }
+}
+.catalog-card:nth-of-type(even) .catalog-card__image--show-more {
+  transform: none;
+}
+@media (min-width: 769px) {
+  .catalog-card:nth-of-type(even) .catalog-card__image--show-more {
+    top: 0;
+    left: 0;
+  }
+}
 
 .catalog-card__heading {
   margin: 0;
@@ -916,7 +987,7 @@ body {
     grid-row: 2/3;
     margin: 0 auto;
     margin-bottom: 13px;
-    max-width: 125px;
+    max-width: 130px;
     font: 200 2rem/1.25 "Oswald", Arial, sans-serif;
     text-align: center;
   }
@@ -1093,7 +1164,7 @@ body {
     padding: 0 36px 39px;
     border: 2px solid #f2f2f2;
     grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 161px auto auto;
   }
 }
 @media (min-width: 1440px) {
