--- a/src/sass/blocks/catalog-list.scss
+++ b/src/sass/blocks/catalog-list.scss
@@ -79,7 +79,7 @@
     border: 2px solid $background-color-4;
 
     grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 161px auto auto;
   }
 
   @media (min-width: $desktop-width) {
