--- a/src/css/style.css
+++ b/src/css/style.css
@@ -827,7 +827,56 @@ body {
 
 .cat-result {
   display: flex;
-  flex-wrap: wrap;
+  position: relative;
+  width: 280px;
+  height: 256px;
+}
+@media (min-width: 769px) {
+  .cat-result {
+    width: 560px;
+    height: 512px;
+  }
+}
+
+.cat-result__image:first-of-type {
+  display: block;
+  margin-right: 4px;
+}
+
+.cat-result__arrow {
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 122px;
+  background-color: transparent;
+}
+@media (min-width: 769px) {
+  .cat-result__arrow {
+    left: 262px;
+  }
+}
+
+@media (max-width: 768px) {
+  .cat-result__arrow-icon:first-of-type {
+    display: block;
+  }
+}
+@media (min-width: 769px) {
+  .cat-result__arrow-icon:first-of-type {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .cat-result__arrow-icon:last-of-type {
+    display: none;
+  }
+}
+@media (min-width: 769px) {
+  .cat-result__arrow-icon:last-of-type {
+    display: block;
+  }
 }
 
 .catalog__wrapper {
@@ -1422,6 +1471,7 @@ body {
 
 .example__wrapper {
   width: 320px;
+  min-height: 659px;
   padding: 0 20px;
   padding-top: 25px;
   display: flex;
@@ -1438,6 +1488,16 @@ body {
   .example__wrapper {
     width: 1440px;
     padding: 0 110px;
+    flex-direction: row;
+  }
+}
+
+.example__description-container {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 1440px) {
+  .example__description-container {
     flex-direction: row;
   }
 }
@@ -1570,12 +1630,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 99px;
   }
 }
 @media (min-width: 1440px) {
   .example__description-content {
     flex-direction: column;
     align-items: flex-start;
+    margin-right: 224px;
   }
 }
 
@@ -1625,6 +1687,12 @@ body {
 @media (min-width: 769px) {
   .example__price {
     font: 200 2rem/1 "Oswald", Arial, sans-serif;
+  }
+}
+
+@media (min-width: 769px) {
+  .example__cat {
+    margin: 0 auto;
   }
 }
 
