--- a/src/sass/blocks/example.scss
+++ b/src/sass/blocks/example.scss
@@ -12,6 +12,7 @@
 
 .example__wrapper {
   width: $mobile-width;
+  min-height: 659px;
 
   padding: 0 20px;
   padding-top: 25px;
@@ -31,6 +32,15 @@
 
     padding: 0 110px;
 
+    flex-direction: row;
+  }
+}
+
+.example__description-container {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $desktop-width) {
     flex-direction: row;
   }
 }
@@ -175,11 +185,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    margin-bottom: 99px;
   }
 
   @media (min-width: $desktop-width) {
     flex-direction: column;
     align-items: flex-start;
+
+    margin-right: 224px;
   }
 }
 
@@ -229,5 +243,11 @@
 
   @media (min-width: $tablet-width) {
     font: $font-result-example-tablet;
+  }
+}
+
+.example__cat {
+  @media (min-width: $tablet-width) {
+    margin: 0 auto;
   }
 }
