задал переменную цифрам  стиль шрифта в секции "как это работает"

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,6 +51,7 @@
 /* === fonts-tablet === */
 /* === fonts-desktop === */
 /* force-state elements */
+/* work-principle-number */
 :root {
   font-size: 62.5%;
 }
