--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -134,3 +134,6 @@ $font-button-secondary-desktop: 200 2rem / normal "Oswald", Arial, sans-serif;
 
 /* force-state elements */
 $background-color-3-hover: #5eaa2f;
+
+/* work-principle-number */
+$work-principle-number: 200 28rem/1 "Oswald", Arial, sans-serif;
