--- a/src/css/style-DESKTOP-U88PS00.css
+++ b/src/css/style-DESKTOP-U88PS00.css
@@ -51,7 +51,6 @@
 /* === fonts-tablet === */
 /* === fonts-desktop === */
 /* force-state elements */
-/* work-principle-number */
 :root {
   font-size: 62.5%;
 }
@@ -1848,12 +1847,15 @@ body {
 }
 
 .location__address {
-  font: 200 1.4rem/1.42 "Lato", Arial, sans-serif;
+  font: 200 1.2rem/1 "Lato", Arial, sans-serif;
+  line-height: 1.42;
   color: #444444;
 }
 @media (min-width: 769px) {
   .location__address {
-    font: 200 1.6rem/1.25 "Lato", Arial, sans-serif;
+    font: 200 1.4rem/1 "Lato", Arial, sans-serif;
+    font-size: 1.6rem;
+    line-height: 1.25;
     text-align: right;
     width: 160px;
   }
@@ -1872,11 +1874,6 @@ body {
   .location__address-place {
     margin-bottom: 26px;
   }
-}
-
-.location__address-city {
-  margin: 0;
-  padding: 0;
 }
 
 .logo__image {
@@ -1953,11 +1950,11 @@ body {
   flex-direction: column;
   position: relative;
 }
-.main-header__wrapper--line {
+.main-header__wrapper--border-bottom {
   border-bottom: 1px solid #d9d9d9;
 }
 @media (min-width: 769px) {
-  .main-header__wrapper--line {
+  .main-header__wrapper--border-bottom {
     border: none;
   }
 }
