--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -65,6 +65,7 @@ $font-title-example-mobile: 200 2.4rem/1 "Oswald", Arial, sans-serif;
 $font-result-example-mobile: 200 1.4rem/1.42 "Oswald", Arial, sans-serif;
 
 $font-title-location-mobile: 200 1.6rem/1.25 "Oswald", Arial, sans-serif;
+$font-address-location-mobile: 200 1.4rem/1.42 "Lato", Arial, sans-serif;
 
 $font-label-text-mobile: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
 
@@ -93,6 +94,7 @@ $font-title-example-tablet: 200 3rem/1.23 "Oswald", Arial, sans-serif;
 $font-result-example-tablet: 200 2rem/1 "Oswald", Arial, sans-serif;
 
 $font-title-location-tablet: 200 2rem/1.3 "Oswald", Arial, sans-serif;
+$font-address-location-tablet: 200 1.6rem/1.25 "Lato", Arial, sans-serif;
 
 $font-label-text-tablet: 200 2rem / normal "Oswald", Arial, sans-serif;
 
