--- a/src/sass/blocks/catalog-list.scss
+++ b/src/sass/blocks/catalog-list.scss
@@ -41,13 +41,7 @@
     }
   }
 
-  &:nth-child(2),
-  &:nth-child(3),
-  &:nth-child(4),
-  &:nth-child(5),
-  &:nth-child(6),
-  &:nth-child(7),
-  &:nth-child(8) {
+  &--line {
     &::after {
       content: "";
       display: block;
