--- a/src/sass/blocks/catalog-card.scss
+++ b/src/sass/blocks/catalog-card.scss
@@ -1,12 +1,37 @@
 .catalog-card {
+  display: grid;
+  grid-template-columns: repeat(2, 140px);
+  grid-template-rows: 112px auto;
+
   background-color: $background-color-2;
 
+  padding: 19px 20px 15px;
+
+  width: 320px;
+  min-height: 233px;
+
+  position: relative;
+
   @media (min-width: $tablet-width) {
+    grid-template-columns: auto;
+    grid-template-rows: 161px auto auto;
+
     background-color: $background-color-4;
+
+    width: 324px;
+    min-height: 430px;
+
+    padding: 0 36px 39px;
+    border: 2px solid $background-color-4;
 
     &--show-more {
       background-color: $background-color-2;
     }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 245px;
+    min-height: 431px;
   }
 }
 
