--- a/src/sass/blocks/catalog-list.scss
+++ b/src/sass/blocks/catalog-list.scss
@@ -3,15 +3,6 @@
 }
 
 .catalog-list__item {
-  padding: 19px 20px 15px;
-
-  width: 320px;
-  min-height: 233px;
-
-  display: grid;
-  grid-template-columns: repeat(2, 140px);
-  grid-template-rows: 112px auto;
-
   position: relative;
 
   &:first-child {
@@ -20,24 +11,17 @@
       content: "";
       display: block;
 
-      width: 320px;
+      width: 100%;
       height: 1px;
 
       background-color: $background-color-9;
 
       position: absolute;
+      z-index: 3;
 
       @media (min-width: $tablet-width) {
         display: none;
       }
-    }
-
-    &::before {
-      top: 0;
-    }
-
-    &::after {
-      bottom: 0;
     }
   }
 
@@ -46,38 +30,17 @@
       content: "";
       display: block;
 
-      width: 320px;
+      width: 100%;
       height: 1px;
 
       background-color: $background-color-9;
 
       position: absolute;
-      bottom: 0;
+      z-index: 3;
 
       @media (min-width: $tablet-width) {
         display: none;
       }
     }
-  }
-
-  &--show-more {
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto auto;
-  }
-
-  @media (min-width: $tablet-width) {
-    width: 324px;
-    min-height: 430px;
-
-    padding: 0 36px 39px;
-    border: 2px solid $background-color-4;
-
-    grid-template-columns: auto;
-    grid-template-rows: 161px auto auto;
-  }
-
-  @media (min-width: $desktop-width) {
-    width: 245px;
-    min-height: 431px;
   }
 }
